unpackaged/main/default/objects/Envelope_Content__c/Envelope_Content__c.object-meta.xml
<CustomObject>
    <label>Envelope Content</label>
    <nameField>
        <displayFormat>WER-{000000}</displayFormat>
        <label>Envelope Content Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Envelope Content</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>