unpackaged/main/default/objects/Envelope_Content__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Wizard_Envelope_Records</relationshipName>
    <type>Lookup</type>
</CustomField>