unpackaged/main/default/objects/Envelope_Content__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Wizard_Envelope_Records</relationshipName>
    <type>Lookup</type>
</CustomField>