unpackaged/main/default/objects/Envelope_Content__c/fields/Envelope__c.field-meta.xml
<CustomField>
    <fullName>Envelope__c</fullName>
    <label>Envelope</label>
    <referenceTo>Envelope__c</referenceTo>
    <relationshipLabel>Envelope Content</relationshipLabel>
    <relationshipName>Wizard_Envelope_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>