unpackaged/main/default/objects/Envelope_Content__c/fields/Required_Document__c.field-meta.xml
<CustomField>
    <fullName>Required_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Required Document</label>
    <referenceTo>Required_Documents__c</referenceTo>
    <relationshipLabel>Envelope Content</relationshipLabel>
    <relationshipName>Envelope_Content</relationshipName>
    <type>Lookup</type>
</CustomField>