unpackaged/main/default/objects/Envelope_Content__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Envelope Content</relationshipLabel>
    <relationshipName>Envelope_Content</relationshipName>
    <type>Lookup</type>
</CustomField>