unpackaged/main/default/objects/Envelope_Content__c/fields/Wizard_Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Wizard_Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>Envelope Content</relationshipLabel>
    <relationshipName>Wizard_Envelope_Records</relationshipName>
    <type>Lookup</type>
</CustomField>